# flask-hypermedia

./: README.rst  pyproject.toml
flask_hypermedia/: __init__.py  jinja_utils.py  resource.py
