[project]
name = "flask-hypermedia"
version = "0.1.0"
description = "A set of tools for building hypermedia-driven applications in Flask"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-htmx (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
